Fixed z-index

--- a/styles/index.css
+++ b/styles/index.css
@@ -35,6 +35,8 @@ input[type=text] {
     border-radius: 10px;
     margin-top: -60px;
     background-color: white;
+    z-index: 2;
+    position: relative;
 }
 
 .info-section > div {
@@ -57,5 +59,5 @@ input[type=text] {
     height: 790px;
     width: 100%; 
     margin-top: -60px;
-    z-index: -1
+    z-index: 1;
 }
